--- a/Project_1/templates/login_success.html
+++ b/Project_1/templates/login_success.html
@@ -11,7 +11,7 @@
 		<h1> Hi {{user_name}} </h1>		
 		<a href="/traininfo/"><button>know about trains</button></a>
 		<a href="/findtrains/"><button>find trains between stations</button></a>
-		<a href="/ticket/"><button>book a ticket</button></a>
+		<!-- <a href="/ticket/"><button>book a ticket</button></a> -->
 		<a href="/logout/"> <button> logout </button></a>
     </center>
 </body>
