--- a/Project_1/static/css/traininfo.css
+++ b/Project_1/static/css/traininfo.css
@@ -14,6 +14,8 @@ body {
 	background-image: url("../images/train.jpg");		
     background-repeat: no-repeat; 
      background-size: cover;
+     height: 100%
+     background-attachment: fixed;
      background-position: center center;
 }
 
