--- a/Project_1/static/css/home.css
+++ b/Project_1/static/css/home.css
@@ -1,7 +1,11 @@
 body {
-	background-image: url("../images/train.jpg");		
+	background-image: url("../images/train.jpg");
 	background-repeat: no-repeat;
-    background-position: right top;
+	background-size: cover;
+	height: 100%;
+	width:100%;
+	background-attachment: fixed;
+	background-position: center center;
 }
 
 h1 {
